--- a/knowledge/sports/nba-2024/qna.yaml
+++ b/knowledge/sports/nba-2024/qna.yaml
@@ -3,7 +3,7 @@ version: 2
 domain: 2024 nba finals
 seed_examples:
  - answer: |
-   boston celtics.Sixteen years to the date after they won their 17th title, the Celtics won their 18th
+   Sixteen years to the date after they won their 17th title, the Celtics won their 18th
    title to break a tie with the Los Angeles Lakers for the most championships in NBA history. 
    Jayson Tatum led the Celtics with 31 points, eight rebounds and 11 assists in a 106–88 blowout victory.
    Jrue Holiday scored the first three buckets of the game for the Celtics. The Mavericks never
