updated based on feedback in triage
Signed-off-by: ljmwaugh <lisa.j.m.waugh@gmail.com>
Co-Authored-By: Regehr, Jonathan <10343188+jregehr@users.noreply.github.com>
Co-Authored-By: Shachar Borenstein <shachar.borenstein@gmail.com>

--- a/knowledge/animals/tabby_cat/qna.yaml
+++ b/knowledge/animals/tabby_cat/qna.yaml
@@ -22,7 +22,7 @@ seed_examples:
       explanation, are the mackerel, classic, ticked, and spotted tabby patterns
    question: What are the patterns that a tabby cat may have?
  - answer: Personality and aggression vary widely from cat to cat, and is multifactorial.
-   question: Do tabby cats have a specific personalities?
+   question: Do tabby cats have specific personalities?
  - answer: |
       A tabby cat, or simply tabby, is any domestic cat (Felis catus)
       with a distinctive M-shaped marking on their forehead, stripes
