Updated the questions in plain_language/qna.yaml with relevant content

--- a/compositional_skills/writing/grounded/editing/plain_language/qna.yaml
+++ b/compositional_skills/writing/grounded/editing/plain_language/qna.yaml
@@ -6,156 +6,156 @@ seed_examples:
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
   - context: |
       context
     question: |
-      question
+      Can you rewrite this statement in plain language?
     answer: |
       answer
